[sc-5899] Improvements on conversational tile

--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -64,6 +64,8 @@
   --rhythm-53: calc(var(--spacer) * 53); /*  53   unit - 424px */
   --rhythm-56: calc(var(--spacer) * 56); /*  56   unit - 448px */
   --rhythm-64: calc(var(--spacer) * 64); /*  64   unit - 512px */
+  --rhythm-75: calc(var(--spacer) * 75); /*  75   unit - 600px */
+  --rhythm-80: calc(var(--spacer) * 80); /*  80   unit - 640px */
 
   /* TYPOGRAPHY */
   --font-size-base: 16px;
