Replace shadow-box by a line around generative answer

--- a/libs/search-widget/src/components/answer/InitialAnswer.scss
+++ b/libs/search-widget/src/components/answer/InitialAnswer.scss
@@ -1,7 +1,7 @@
 .sw-initial-answer {
+  border: 1px solid var(--color-neutral-light);
   border-radius: var(--rhythm-2);
-  box-shadow: 0 0 var(--rhythm-2) var(--color-neutral-lighter);
-  margin: var(--rhythm-1) 0;
+  margin-bottom: var(--rhythm-1);
   padding: var(--rhythm-2) var(--rhythm-3);
   position: relative;
 
