Make widget theme mostly customizable

--- a/libs/search-widget/src/common/button/Button.scss
+++ b/libs/search-widget/src/common/button/Button.scss
@@ -108,8 +108,8 @@
     --button-background-color: transparent;
     --button-background-color-hover: var(--color-neutral-light);
     --button-background-color-active: var(--color-neutral-regular);
-    --button-color: var(--color-dark-stronger);
-    --button-color-hover: var(--color-dark-stronger);
+    --button-color: var(--default-text-color);
+    --button-color-hover: var(--default-text-color);
     --button-color-active: var(--color-light-stronger);
   }
 
