--- a/libs/search-widget/src/common/indicators/_indicator.scss
+++ b/libs/search-widget/src/common/indicators/_indicator.scss
@@ -2,6 +2,7 @@
   align-items: center;
   background: var(--color-neutral-lightest);
   border-radius: var(--rhythm-4);
+  color: var(--color-dark-stronger);
   cursor: pointer;
   display: flex;
   font-size: var(--font-size-medium);
