--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -118,16 +118,23 @@
   --focus-shadow: inset 0 0 0 var(--rhythm-0_25) var(--color-primary-lighter);
 
   // Search bar
-  --search-bar-border-color: var(--color-neutral-regular);
+  --search-bar-border-color: var(--default-border-color);
   --search-bar-border-focus-color: var(--color-primary-regular);
   --search-bar-border: 1px solid var(--search-bar-border-color);
   --search-bar-border-focus: 1px solid var(--search-bar-border-focus-color);
   --search-bar-border-radius: 0;
   --search-bar-max-width: var(--rhythm-56);
 
-  // General
+  // Customizable theme
+  --default-text-color: var(--custom-text-color, var(--color-dark-stronger));
+  --default-border-color: var(--custom-border-color, var(--color-neutral-regular));
+  --default-hover-background-color: var(--custom-hover-background-color, var(--color-neutral-lightest));
+  --default-modal-background-color: var(--custom-modal-background-color, var(--color-neutral-lighter));
+  --default-container-background-color: var(--custom-container-background-color, var(--color-light-stronger));
+
+  // Global style
   box-sizing: border-box;
-  color: var(--color-dark-stronger);
+  color: var(--default-text-color);
   font-family: var(--font-family-body);
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-body);
