Tokenize dropdown and thumbnail
Simplify token names (remove the `--default` prefix which doesn't makes sense as the custom theme variables are used to initialize the tokens)

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -63,10 +63,11 @@ ul.sw-dropdown-options {
     padding: 0 var(--rhythm-2);
 
     &:hover {
-      background-color: var(--color-neutral-lightest);
+      background-color: var(--hover-background-color);
     }
     &.selected {
-      background-color: var(--color-primary-lightest);
+      background-color: var(--selected-background-color);
+      color: var(--selected-text-color);
     }
   }
 }
