--- a/libs/search-widget/src/common/dropdown/Dropdown.scss
+++ b/libs/search-widget/src/common/dropdown/Dropdown.scss
@@ -1,5 +1,5 @@
 .sw-dropdown {
-  background-color: var(--color-light-stronger);
+  background-color: var(--dropdown-background-color);
   box-shadow: var(--shadow-modal);
   position: fixed;
   width: var(--rhythm-27);
