--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -118,7 +118,7 @@
   --focus-shadow: inset 0 0 0 var(--rhythm-0_25) var(--color-primary-lighter);
 
   // Search bar
-  --search-bar-border-color: var(--default-border-color);
+  --search-bar-border-color: var(--border-color);
   --search-bar-border-focus-color: var(--color-primary-regular);
   --search-bar-border: 1px solid var(--search-bar-border-color);
   --search-bar-border-focus: 1px solid var(--search-bar-border-focus-color);
@@ -126,16 +126,19 @@
   --search-bar-max-width: var(--rhythm-56);
 
   // Customizable theme
-  --default-text-color: var(--custom-text-color, var(--color-dark-stronger));
-  --default-border-color: var(--custom-border-color, var(--color-neutral-regular));
-  --default-hover-background-color: var(--custom-hover-background-color, var(--color-neutral-lightest));
-  --default-modal-background-color: var(--custom-modal-background-color, var(--color-neutral-lighter));
+  --border-color: var(--custom-border-color, var(--color-dark-stronger));
+  --text-color: var(--custom-text-color, var(--color-dark-stronger));
+  --selected-text-color: var(--custom-selected-text-color, inherit);
+  --selected-background-color: var(--custom-selected-background-color, var(--color-primary-lightest));
+  --hover-background-color: var(--custom-hover-background-color, var(--color-neutral-lightest));
+  --thumbnail-background-color: var(--custom-thumbnail-background-color, var(--color-neutral-lightest));
+  --modal-background-color: var(--custom-modal-background-color, var(--color-neutral-lighter));
   --dropdown-background-color: var(--custom-dropdown-background-color, var(--color-light-stronger));
-  --default-container-background-color: var(--custom-container-background-color, var(--color-light-stronger));
+  --container-background-color: var(--custom-container-background-color, var(--color-light-stronger));
 
   // Global style
   box-sizing: border-box;
-  color: var(--default-text-color);
+  color: var(--text-color);
   font-family: var(--font-family-body);
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-body);
