[sc-6085] fix dark theme (#856)
* Fix suggestion dropdown position and style

Use color tokens

* Tokenize dropdown and thumbnail

Simplify token names (remove the `--default` prefix which doesn't makes sense as the custom theme variables are used to initialize the tokens)

--- a/libs/search-widget/src/components/suggestions/Suggestions.scss
+++ b/libs/search-widget/src/components/suggestions/Suggestions.scss
@@ -1,6 +1,8 @@
 .sw-suggestions {
   --suggestion-side-padding: var(--rhythm-3);
 
+  background: var(--dropdown-background-color);
+
   .error-message {
     padding: 0 var(--rhythm-2);
   }
@@ -28,7 +30,7 @@
   }
   .paragraph:hover,
   .paragraph:focus {
-    background-color: var(--color-neutral-lightest);
+    background-color: var(--hover-background-color);
     outline: 0;
   }
 
