--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -144,4 +144,16 @@
   font-weight: var(--font-weight-body);
   line-height: var(--line-height-body);
   text-align: left;
+
+  &.dark-mode {
+    --border-color: var(--color-neutral-lightest);
+    --text-color: var(--color-neutral-lightest);
+    --selected-text-color: var(--color-dark-stronger);
+    --selected-background-color: var(--color-neutral-lightest);
+    --hover-background-color: #2b2d30;
+    --thumbnail-background-color: #2b2d30;
+    --modal-background-color: #303136;
+    --dropdown-background-color: #26282B;
+    --container-background-color: #1f2023;
+  }
 }
