--- a/libs/search-widget/src/tiles/viewers/PdfViewer.scss
+++ b/libs/search-widget/src/tiles/viewers/PdfViewer.scss
@@ -15,7 +15,7 @@
 
   .pdf-controller {
     align-items: center;
-    background-color: var(--color-neutral-lighter);
+    background-color: var(--modal-background-color);
     border-radius: var(--rhythm-0_5);
     bottom: var(--rhythm-3);
     display: flex;
