--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -119,7 +119,7 @@
 
   // Search bar
   --search-bar-border-color: var(--border-color);
-  --search-bar-border-focus-color: var(--color-primary-regular);
+  --search-bar-border-focus-color: var(--border-focus-color);
   --search-bar-border: 1px solid var(--search-bar-border-color);
   --search-bar-border-focus: 1px solid var(--search-bar-border-focus-color);
   --search-bar-border-radius: 0;
@@ -127,6 +127,7 @@
 
   // Customizable theme
   --border-color: var(--custom-border-color, var(--color-dark-stronger));
+  --border-focus-color: var(--custom-border-focus-color, var(--color-primary-regular));
   --text-color: var(--custom-text-color, var(--color-dark-stronger));
   --selected-text-color: var(--custom-selected-text-color, inherit);
   --selected-background-color: var(--custom-selected-background-color, var(--color-primary-lightest));
