--- a/libs/common/src/lib/widgets/widget-generator.component.scss
+++ b/libs/common/src/lib/widgets/widget-generator.component.scss
@@ -92,4 +92,10 @@ $width-configuration: rhythm(56);
       }
     }
   }
+
+  .widget-preview.dark {
+    background: #1f2023;
+    color: $color-light-stronger;
+    padding: rhythm(2);
+  }
 }
