--- a/libs/search-widget/src/components/answer/Chat.scss
+++ b/libs/search-widget/src/components/answer/Chat.scss
@@ -1,40 +1,60 @@
 .sw-chat {
-  --main-padding-side: var(--rhythm-2);
-  --main-padding-top: var(--rhythm-7);
+  --main-padding-side: 0;
+  --main-padding-top: 0;
 
-  background: var(--modal-background-color);
-  bottom: 0;
-  display: flex;
-  left: 0;
-  justify-content: center;
-  padding: var(--main-padding-top) var(--main-padding-side) 0;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: var(--z-index-modal);
+  &.fullscreen {
+    --main-padding-side: var(--rhythm-2);
+    --main-padding-top: var(--rhythm-7);
 
-  header {
-    position: absolute;
-    right: var(--rhythm-1);
-    top: var(--rhythm-1);
+    background: var(--modal-background-color);
+    bottom: 0;
+    display: flex;
+    left: 0;
+    justify-content: center;
+    padding: var(--main-padding-top) var(--main-padding-side) 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: var(--z-index-modal);
+
+    header {
+      position: absolute;
+      right: var(--rhythm-1);
+      top: var(--rhythm-1);
+    }
   }
 
   .chat-container {
     --chat-padding: var(--rhythm-1_5);
-    --height-input: var(--rhythm-6);
-    --max-width-container: calc(100vw - var(--main-padding-side) * 2);
+    --height-container: var(--custom-height-container, 500px);
+    --height-input: calc(
+      var(--rhythm-6) + var(--padding-top-input-container) + var(--padding-bottom-input-container)
+    );
+    --max-width-container: 100%;
+    --max-height-entries: calc(var(--height-container) - var(--height-input));
+    --padding-top-input-container: var(--chat-padding);
+    --padding-bottom-input-container: var(--chat-padding);
+    --padding-side-input-container: var(--chat-padding);
+
+    &.fullscreen {
+      --height-container: calc(100vh - var(--main-padding-top));
+      --max-width-container: calc(100vw - var(--main-padding-side) * 2);
+      --padding-top-input-container: 0;
+      --padding-bottom-input-container: 0;
+      --padding-side-input-container: 0;
+    }
 
     background: var(--container-background-color);
     display: flex;
     flex: 1 0 auto;
     flex-direction: column;
-    height: 100%;
+    height: var(--height-container);
     max-width: var(--max-width-container);
 
     .entries-container {
-      max-height: calc(100vh - var(--main-padding-top) - var(--height-input));
+      max-height: var(--max-height-entries);
       overflow: auto;
-      flex: 1 0 auto;
+      flex: 1 0 0;
 
       .chat-entry {
         padding: var(--chat-padding);
@@ -51,34 +71,32 @@
           gap: var(--rhythm-2);
         }
         .answer {
-          max-width: calc(100vw - var(--main-padding-side) * 2 - var(--chat-padding) * 2);
+          max-width: calc(var(--max-width-container) - var(--chat-padding) * 2);
         }
       }
     }
 
     .input-container {
       flex: 0 0 auto;
+      padding: var(--padding-top-input-container) var(--padding-side-input-container) var(--padding-bottom-input-container);
     }
   }
 }
 
 @media (min-width: 599px) {
   .sw-chat {
-    --main-padding-side: var(--rhythm-3);
+    &.fullscreen {
+      --main-padding-side: var(--rhythm-3);
+    }
 
     .chat-container {
-      --padding-top-input-container: var(--rhythm-2);
-      --padding-bottom-input-container: var(--rhythm-4);
-      --height-input: calc(
-        var(--rhythm-6) + var(--padding-top-input-container) + var(--padding-bottom-input-container)
-      );
-
-      .input-container {
-        padding: var(--padding-top-input-container) var(--rhythm-4) var(--padding-bottom-input-container);
-
-        &.scrolling-behind {
-          border-top: 1px solid var(--color-neutral-lighter);
-        }
+      &.fullscreen {
+        --padding-top-input-container: var(--rhythm-2);
+        --padding-bottom-input-container: var(--rhythm-4);
+        --padding-side-input-container: var(--rhythm-4);
+      }
+      .input-container.scrolling-behind {
+        border-top: 1px solid var(--color-neutral-lighter);
       }
     }
   }
@@ -86,21 +104,22 @@
 
 @media (min-width: 1023px) {
   .sw-chat {
-    --main-padding-side: var(--rhythm-12);
-    --main-padding-top: 0;
+    &.fullscreen {
+      --main-padding-side: var(--rhythm-12);
+      --main-padding-top: 0;
+    }
 
     .chat-container {
-      --max-width-container: calc(var(--rhythm-64) * 2);
-      --padding-bottom-input-container: var(--rhythm-9);
+      &.fullscreen {
+        --max-width-container: calc(var(--rhythm-64) * 2);
+        --padding-bottom-input-container: var(--rhythm-9);
+        --padding-side-input-container: var(--rhythm-10);
+      }
 
       .entries-container {
         .title-m {
           max-width: calc(var(--max-width-container) - var(--rhythm-12) * 2);
         }
-      }
-
-      .input-container {
-        padding: var(--padding-top-input-container) var(--rhythm-10) var(--padding-bottom-input-container);
       }
     }
   }
