Viewer side panel
  - Side panel content (search results, transcripts, summary)
  - Side panel layout and transitions
  - New MetadataContainer component properly working on mobile and desktop
  - Transitions on MetadataContainer section expanding/collapsing
  - Move SearchResultNavigator to `components/viewer`
  - Fix selection highlight on side panel

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -116,6 +116,15 @@ ul.sw-dropdown-options {
   }
 }
 
+.sw-paragraphs-container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--paragraph-gap);
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .title-m {
   font-size: var(--font-size-title-m);
   font-weight: var(--font-weight-title-m);
