--- a/libs/search-widget/src/common/indicators/_indicator.scss
+++ b/libs/search-widget/src/common/indicators/_indicator.scss
@@ -25,7 +25,7 @@
     background: var(--color-primary-lightest);
   }
   &.selected {
-    background: var(--color-primary-lightest);
+    background: var(--color-primary-lighter);
     color: var(--color-primary-regular);
   }
   &.selected:active {
