--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -33,8 +33,8 @@
       gap: var(--rhythm-0_5);
       padding: var(--rhythm-2);
     }
-    &.no-indicator.selected {
-      color: var(--color-primary-regular);
+    &.selected {
+      background: var(--selected-background-color);
     }
     &:not(.disabled) {
       cursor: pointer;
