--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -43,6 +43,11 @@
         <stf-upload-button></stf-upload-button>
 
         <pa-button
+          *ngIf="!standalone"
+          (click)="useDesktop()">
+          {{ 'resource.upload_via_desktop' | translate }}
+        </pa-button>
+        <pa-button
           *ngIf="hasSampleData | async"
           kind="destructive"
           aspect="basic"
