--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -52,7 +52,7 @@
         </div>
         <div
           class="contact"
-          [innerHTML]="'billing.self_hosted' | translate: { url: 'mailto:billing@nuclia.com' }"></div>
+          [innerHTML]="'billing.self_hosted' | translate: { url: 'mailto:support@nuclia.com' }"></div>
       </div>
     </form>
   </pa-modal-content>
