--- a/libs/search-widget/src/components/result-row/ResultRow.scss
+++ b/libs/search-widget/src/components/result-row/ResultRow.scss
@@ -1,4 +1,5 @@
 .sw-result-row {
+  --paragraph-height: var(--rhythm-4);
   --paragraph-gap: var(--rhythm-0_5);
 
   display: flex;
@@ -20,6 +21,18 @@
       margin: 0 0 var(--rhythm-1);
     }
   }
+
+  .sw-paragraphs-container {
+    height: calc(
+      var(--paragraph-height) * var(--paragraph-count) + var(--paragraph-gap) * (var(--paragraph-count) - 1)
+    );
+    overflow: hidden;
+    transition: height var(--transition-fast);
+
+    &.can-expand:not(.expanded) {
+      height: calc(var(--paragraph-height) * 4 + var(--paragraph-gap) * 3);
+    }
+  }
 }
 
 @media (max-width: 647px) {
@@ -30,6 +43,7 @@
 
 @media (min-width: 648px) {
   .sw-result-row {
+    --paragraph-height: var(--rhythm-3);
     --width-thumbnail: var(--rhythm-28);
 
     gap: var(--rhythm-2);
